2005-10-23  Marek Safar <marek.safar@seznam.cz>

	* test-40.cs: Add one test case.

2005-10-21  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* test-extern-alias-[0-8].cs, test-externalias-00-lib.cs,
	test-externalias-01-lib.cs: New tests for extern alias
	in mcs.
	* known-issues-gmcs: Add the new extern alias tests, since 
	these changes are only -by now- in mcs.

2005-10-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile (run-test-local): Make compiler-tester use $(RUNTIME)
	when running tests out-of-process.

2005-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* gtest-216.cs : new test for #76382.

2005-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* gtest-215.cs : make it runnable.

2005-10-18  Raja R Harinath  <rharinath@novell.com>

	* test-463.cs: New test from #76371.

2005-10-18  Marek Safar <marek.safar@seznam.cz>

	* test-462.cs: Regression spotted by Miguel.

2005-10-17  Marek Safar <marek.safar@seznam.cz>

	* test-10.cs: More explicit conversion tests.
	
2005-10-11  Raja R Harinath  <rharinath@novell.com>

	* gtest-212.cs, gtest-213.cs: New tests based on #76084.

2005-10-11  Marek Safar <marek.safar@seznam.cz>

	* test-461.cs: New test for #76370.

2005-10-07  Raja R Harinath  <rharinath@novell.com>

	* test-460.cs: New test.

2005-10-06  Marek Safar <marek.safar@seznam.cz>

	* test-459.cs: New test.

2005-10-06  Raja R Harinath  <rharinath@novell.com>

	* gtest-211.cs: New test to check that we don't emit unreachable
	code that violates execution stack invariants.

2005-10-03  Marek Safar <marek.safar@seznam.cz>

	* test-10.cs: One more test.

2005-10-03  Atsushi Enomoto  <atsushi@ximian.com>

	* test-458.cs : test for bug #75723.

2005-09-28  Martin Baulig  <martin@ximian.com>

	* gtest-206.cs: New test for #76262.

2005-09-28  Martin Baulig  <martin@ximian.com>

	* gtest-205.cs: New test for #75917.

2005-09-27  Martin Baulig  <martin@ximian.com>

	* gtest-204.cs: New test for #75773.

2005-09-27  Martin Baulig  <martin@ximian.com>
