@@ -1,3 +1,7 @@
+2005-10-25  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* gtest-223.cs : new test for #76551.
+
 2005-10-23  Marek Safar <marek.safar@seznam.cz>
 
 	* test-40.cs: Add one test case.
